# signal-kb

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  tags.example.yaml
docs/: design.md  setup.md
pipeline/: bot.py  extract.py  summarize.py  vault.py
pipeline/prompts/: system_prompt.txt
systemd/: kb-bot.service
