[project]
name = "signal-kb"
version = "0.1.0"
description = "Signal-to-Markdown knowledge base ingestion pipeline"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50",
    "websockets>=12",
    "trafilatura>=1.12",
    "pymupdf>=1.24",
    "python-slugify>=8",
    "pyyaml>=6",
    "gitpython>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.uv]
dev-dependencies = ["pytest>=8", "pytest-asyncio>=0.23"]
